--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     Naprawa i diagnostyka komputerów
                   </p>
                   <h3 class="costs-cost">Od 100zł / brutto</h3>
-                  <span class="cost-time">za godzinę</span>
+                  <span class="cost-time"></span>
                   <div class="costs-packs">
                     <div class="costs-pack">
                       <img src="images/check.svg" alt="znaczek akceptacji" />
@@ -276,7 +276,7 @@
                     Instalacja i konfiguracja oprogramowania
                   </p>
                   <h3 class="costs-cost">Od 50zł / brutto</h3>
-                  <span class="cost-time">za godzinę</span>
+                  <span class="cost-time"></span>
                   <div class="costs-packs">
                     <div class="costs-pack">
                       <img src="images/check.svg" alt="znaczek akceptacji" />
@@ -320,7 +320,7 @@
                     Optymalizacja i konserwacja systemów komputerowych
                   </p>
                   <h3 class="costs-cost">Od 70zł / brutto</h3>
-                  <span class="cost-time">za godzinę</span>
+                  <span class="cost-time"></span>
                   <div class="costs-packs">
                     <div class="costs-pack">
                       <img src="images/check.svg" alt="znaczek akceptacji" />
@@ -398,7 +398,7 @@
                     solidnej pomocy bez nadmiernych kosztów.
                   </p>
                   <h3 class="costs-cost">Od 100zł / brutto</h3>
-                  <span class="cost-time">za miesiąc</span>
+                  <span class="cost-time"></span>
                   <div class="costs-packs">
                     <div class="costs-pack">
                       <img src="images/check.svg" alt="znaczek akceptacji" />
@@ -460,7 +460,7 @@
                     oraz priorytetowe wsparcie online.
                   </p>
                   <h3 class="costs-cost">Od 200zł / brutto</h3>
-                  <span class="cost-time">za miesiąc</span>
+                  <span class="cost-time"></span>
                   <div class="costs-packs">
                     <div class="costs-pack">
                       <img src="images/check.svg" alt="znaczek akceptacji" />
@@ -522,7 +522,7 @@
                     którzy cenią sobie najwyższą jakość obsługi.
                   </p>
                   <h3 class="costs-cost">Od 500zł / brutto</h3>
-                  <span class="cost-time">za miesiąc</span>
+                  <span class="cost-time"></span>
                   <div class="costs-packs">
                     <div class="costs-pack">
                       <img src="images/check.svg" alt="znaczek akceptacji" />
@@ -694,8 +694,7 @@
             data-aos-delay="400"
           >
             <iframe
-              title="google mapa"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2326.3404512110956!2d18.620594577199654!3d54.33329050042187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd73f2abbc5d51%3A0x2d4f5343ae0b5d03!2s80-001%20Gda%C5%84sk!5e0!3m2!1spl!2spl!4v1707034711596!5m2!1spl!2spl"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2377.078643848405!2d14.554025099999999!3d53.431302099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47aa0913bc00a159%3A0xfb538b13340e6c0c!2sal.%20Wyzwolenia%2019%2F13%2C%2070-554%20Szczecin!5e0!3m2!1spl!2spl!4v1707168574285!5m2!1spl!2spl"
               width="600"
               height="450"
               style="border: 0"
