--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Profesjonalny serwis komputerowy oferujący kompleksowe rozwiązania dla Twojego sprzętu. Naprawy, konserwacja, doradztwo techniczne i wiele więcej. Skorzystaj z naszych usług, aby cieszyć się sprawnym i wydajnym komputerem."
     />
+    <link rel="icon" href="images/logo.svg" type="image/x-icon" />
     <title>
       Serwis Komputerowy Adrian Keller - Serwis Komputerów i Laptopów Szczecin
       Centrum
@@ -41,7 +42,7 @@
         <nav class="navigation">
           <img
             data-aos="fade-down"
-            data-aos-duration="1000"
+            data-aos-duration="500"
             class="nav-logo"
             src="images/logo.svg"
             alt="logo"
@@ -49,7 +50,7 @@
           <div
             class="navigation-bar"
             data-aos="fade-down"
-            data-aos-duration="1000"
+            data-aos-duration="500"
           >
             <div class="navigation-circle"></div>
             <div class="navigation-bar--middle"></div>
@@ -62,7 +63,7 @@
             <ul
               class="navigation-list"
               data-aos="fade-down"
-              data-aos-duration="1000"
+              data-aos-duration="500"
             >
               <li><a href="#" class="navigation-link">Strona główna</a></li>
               <li><a href="#history" class="navigation-link">O nas</a></li>
@@ -78,7 +79,7 @@
         </nav>
 
         <section class="header-content">
-          <div class="header-text" data-aos="fade-up" data-aos-duration="1000">
+          <div class="header-text" data-aos="fade-up" data-aos-duration="500">
             <h1 class="header-content-title">
               Serwis Komputerowy Adrian Keller
             </h1>
@@ -108,18 +109,14 @@
           <span
             class="history-subtitle"
             data-aos="fade-up"
-            data-aos-duration="1000"
+            data-aos-duration="500"
             >Nasza historia</span
           >
-          <h2 class="history-title" data-aos="fade-up" data-aos-duration="1000">
+          <h2 class="history-title" data-aos="fade-up" data-aos-duration="500">
             Zespół Ekspertów w Świecie Komputerów
           </h2>
           <div class="history-boxes">
-            <div
-              class="history-box"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-            >
+            <div class="history-box" data-aos="fade-up" data-aos-duration="500">
               <div class="history-box-square">
                 <img src="images/puchar.svg" alt="ikona pucharu" />
               </div>
@@ -133,11 +130,7 @@
                 usług.
               </p>
             </div>
-            <div
-              class="history-box"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-            >
+            <div class="history-box" data-aos="fade-up" data-aos-duration="500">
               <div class="history-box-square">
                 <img src="images/klient.svg" alt="ikona pucharu" />
               </div>
@@ -151,11 +144,7 @@
                 dostosować nasze usługi do oczekiwań klientów.
               </p>
             </div>
-            <div
-              class="history-box"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-            >
+            <div class="history-box" data-aos="fade-up" data-aos-duration="500">
               <div class="history-box-square">
                 <img src="images/idea.svg" alt="ikona pucharu" />
               </div>
@@ -168,11 +157,7 @@
                 serwisu komputerowego i stale doskonalimy nasze umiejętności.
               </p>
             </div>
-            <div
-              class="history-box"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-            >
+            <div class="history-box" data-aos="fade-up" data-aos-duration="500">
               <div class="history-box-square">
                 <img src="images/stars.svg" alt="ikona pucharu" />
               </div>
@@ -192,10 +177,10 @@
           <span
             class="costs-subtitle"
             data-aos="fade-up"
-            data-aos-duration="1000"
+            data-aos-duration="500"
             >Najlepsze ceny</span
           >
-          <h2 class="costs-title" data-aos="fade-up" data-aos-duration="1000">
+          <h2 class="costs-title" data-aos="fade-up" data-aos-duration="500">
             Cennik Naszych Profesjonalnych Rozwiązań
           </h2>
           <div id="carouselExampleIndicators1" class="carousel slide slide-1">
@@ -226,7 +211,7 @@
                 <div
                   class="costs-box"
                   data-aos="zoom-in"
-                  data-aos-duration="1000"
+                  data-aos-duration="500"
                 >
                   <div class="costs-level">Podstawowy</div>
                   <p class="costs-description">
@@ -268,7 +253,7 @@
                 <div
                   class="costs-box"
                   data-aos="zoom-in"
-                  data-aos-duration="1000"
+                  data-aos-duration="500"
                   data-aos-delay="400"
                 >
                   <div class="costs-level">Profesjonalny</div>
@@ -312,7 +297,7 @@
                 <div
                   class="costs-box"
                   data-aos="zoom-in"
-                  data-aos-duration="1000"
+                  data-aos-duration="500"
                   data-aos-delay="800"
                 >
                   <div class="costs-level">Premium</div>
@@ -390,7 +375,7 @@
                 <div
                   class="costs-box"
                   data-aos="zoom-in"
-                  data-aos-duration="1000"
+                  data-aos-duration="500"
                 >
                   <div class="costs-level">Podstawowy</div>
                   <p class="costs-description">
@@ -451,7 +436,7 @@
                 <div
                   class="costs-box"
                   data-aos="zoom-in"
-                  data-aos-duration="1000"
+                  data-aos-duration="500"
                   data-aos-delay="400"
                 >
                   <div class="costs-level">Profesjonalny</div>
@@ -513,7 +498,7 @@
                 <div
                   class="costs-box"
                   data-aos="zoom-in"
-                  data-aos-duration="1000"
+                  data-aos-duration="500"
                   data-aos-delay="800"
                 >
                   <div class="costs-level">Premium</div>
@@ -580,20 +565,16 @@
               <span
                 class="shop-subtitlte"
                 data-aos="fade-up"
-                data-aos-duration="1000"
+                data-aos-duration="500"
                 >Nasz sklep</span
               >
-              <h2
-                class="shop-title"
-                data-aos="fade-up"
-                data-aos-duration="1000"
-              >
+              <h2 class="shop-title" data-aos="fade-up" data-aos-duration="500">
                 Sklep Technologiczny i Ekspert Wsparcia
               </h2>
               <p
                 class="shop-description"
                 data-aos="fade-up"
-                data-aos-duration="1000"
+                data-aos-duration="500"
               >
                 Oferujemy szeroki wybór komputerów, dostosowanych do
                 różnorodnych potrzeb i oczekiwań. Bez względu na to, czy jesteś
@@ -605,7 +586,7 @@
               <p
                 class="shop-description shop-description-desktop"
                 data-aos="fade-up"
-                data-aos-duration="1000"
+                data-aos-duration="500"
               >
                 Zanurz się w świecie naszego sklepu, gdzie technologia łączy się
                 z inspiracją, a innowacyjność staje się standardem. Dziękujemy
@@ -616,7 +597,7 @@
               <a
                 target="_blank"
                 data-aos="fade-up"
-                data-aos-duration="1000"
+                data-aos-duration="500"
                 href="https://sklep.serwiskak.pl/"
                 class="go-to-shop-desktop"
                 >Przejdź do sklepu<span class="material-symbols-outlined">
@@ -627,7 +608,7 @@
             <div
               class="shop-img-container"
               data-aos="fade-up"
-              data-aos-duration="1000"
+              data-aos-duration="500"
             >
               <img
                 src="images/mac.svg"
@@ -653,7 +634,7 @@
       </main>
       <footer id="contact" class="footer">
         <div class="footer-top">
-          <div class="hours" data-aos="fade-up" data-aos-duration="1000">
+          <div class="hours" data-aos="fade-up" data-aos-duration="500">
             <h3>Godziny otwarcia:</h3>
             <div class="hours-details">
               <span>Poniedziałek - Piątek: 8:00 - 22:00</span>
@@ -664,7 +645,7 @@
           <div
             class="contact"
             data-aos="fade-up"
-            data-aos-duration="1000"
+            data-aos-duration="500"
             data-aos-delay="800"
           >
             <h3>Kontakt</h3>
@@ -690,7 +671,7 @@
           <div
             class="map"
             data-aos="fade-up"
-            data-aos-duration="1000"
+            data-aos-duration="500"
             data-aos-delay="400"
           >
             <iframe
@@ -707,7 +688,7 @@
         <div
           class="copyright"
           data-aos="zoom-in"
-          data-aos-duration="1000"
+          data-aos-duration="500"
           data-aos-offset="0"
           data-aos-delay="700"
         >
@@ -722,9 +703,11 @@
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init({
-        offset: 100,
-        once: true,
+      document.addEventListener("DOMContentLoaded", function () {
+        AOS.init({
+          offset: 100,
+          once: true,
+        });
       });
     </script>
     <script
